Fix spacing around HubSpot form

--- a/src/components/Contentful/_contentful_hub_spot_form.scss
+++ b/src/components/Contentful/_contentful_hub_spot_form.scss
@@ -1,4 +1,5 @@
 .contentful-hub-spot-form {
-  margin: 0 auto 40px auto;
-  max-width: 600px;
+  margin: 0 auto;
+  padding: 1.5rem;
+  max-width: 40rem;
 }
